crates/compiler/mir/tests/snapshots/mdtest_snapshots__mdtest_mir_snapshots@01-recursion@recursion_in_cairo_m___simple_recursion.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Recursion in Cairo-M - Simple Recursion"
input_file: mdtest/04-advanced/01-recursion.md
---
Test: Recursion in Cairo-M - Simple Recursion
File: /Users/msaug/kkrt-labs/cairo-m/mdtest/04-advanced/01-recursion.md
============================================================
Source:
fn test_factorial() -> felt {
    return factorial(5);  // Returns 120
}

fn factorial(n: felt) -> felt {
    if n == 0 {
        return 1;
    } else {
        return n * factorial(n - 1);
    }
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test_factorial {
    entry: 0

    0:
      %0 = call 1(5)
      return %0

  }

  // Function 1
  fn factorial {
    parameters: [0]
    entry: 0

    0:
      if %0 then jump 2 else jump 1

    1:
      return 1

    2:
      %2 = %0 Sub 1
      %3 = call 1(%2)
      %4 = %0 Mul %3
      return %4

  }

}
